force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/Anticipated_Changes_to_Circumstance__c.object-meta.xml
<CustomObject>
    <label>Anticipated Changes to Circumstance</label>
    <nameField>
        <label>Anticipated Changes to Circumstance</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Anticipated Changes to Circumstances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>