force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Additional_income_source__c.field-meta.xml
<CustomField>
    <fullName>Additional_income_source__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional income source</label>
    <type>Checkbox</type>
</CustomField>