force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Additional_income_source_Description__c.field-meta.xml
<CustomField>
    <fullName>Additional_income_source_Description__c</fullName>
    <label>Additional income source Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>