force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Applicant_2_planning_to_retire_Age__c.field-meta.xml
<CustomField>
    <fullName>Applicant_2_planning_to_retire_Age__c</fullName>
    <label>Applicant 2 planning to retire Age</label>
    <length>255</length>
    <type>Text</type>
</CustomField>