force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Co_applicant_s_income__c.field-meta.xml
<CustomField>
    <fullName>Co_applicant_s_income__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Co-applicant&apos;s income</label>
    <type>Checkbox</type>
</CustomField>