force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Co_applicant_s_income_Description__c.field-meta.xml
<CustomField>
    <fullName>Co_applicant_s_income_Description__c</fullName>
    <label>Co applicant s income Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>