force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Co_applicant_s_income_Retirement__c.field-meta.xml
<CustomField>
    <fullName>Co_applicant_s_income_Retirement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Co-applicant&apos;s income Retirement</label>
    <type>Checkbox</type>
</CustomField>