force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Do_you_plan_or_anticipate_changes__c.field-meta.xml
<CustomField>
    <fullName>Do_you_plan_or_anticipate_changes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you plan or anticipate changes</label>
    <type>Checkbox</type>
</CustomField>