force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Downsizing_home__c.field-meta.xml
<CustomField>
    <fullName>Downsizing_home__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Downsizing home</label>
    <type>Checkbox</type>
</CustomField>