force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Downsizing_home_Description__c.field-meta.xml
<CustomField>
    <fullName>Downsizing_home_Description__c</fullName>
    <label>Downsizing home Description</label>
    <type>TextArea</type>
</CustomField>