force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/End_of_contract_loss_of_emp__c.field-meta.xml
<CustomField>
    <fullName>End_of_contract_loss_of_emp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End of contract / loss of emp</label>
    <type>Checkbox</type>
</CustomField>