force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/End_of_contract_loss_of_emp_Description__c.field-meta.xml
<CustomField>
    <fullName>End_of_contract_loss_of_emp_Description__c</fullName>
    <label>End of contract loss of emp Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>