force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Extended_unpaid_Leave__c.field-meta.xml
<CustomField>
    <fullName>Extended_unpaid_Leave__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extended unpaid Leave</label>
    <type>Checkbox</type>
</CustomField>