force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Extended_unpaid_Leave_Description__c.field-meta.xml
<CustomField>
    <fullName>Extended_unpaid_Leave_Description__c</fullName>
    <label>Extended unpaid Leave Description</label>
    <type>TextArea</type>
</CustomField>