force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Income_from_other_investment_Description__c.field-meta.xml
<CustomField>
    <fullName>Income_from_other_investment_Description__c</fullName>
    <label>Income from other investment Description</label>
    <type>TextArea</type>
</CustomField>