force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Income_from_other_investments__c.field-meta.xml
<CustomField>
    <fullName>Income_from_other_investments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Income from other investments</label>
    <type>Checkbox</type>
</CustomField>