force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Increased_debt_repayment__c.field-meta.xml
<CustomField>
    <fullName>Increased_debt_repayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Increased debt repayment</label>
    <type>Checkbox</type>
</CustomField>