force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Increased_debt_repayment_Description__c.field-meta.xml
<CustomField>
    <fullName>Increased_debt_repayment_Description__c</fullName>
    <label>Increased debt repayment Description</label>
    <type>TextArea</type>
</CustomField>