force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Large_expenditure__c.field-meta.xml
<CustomField>
    <fullName>Large_expenditure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Large expenditure</label>
    <type>Checkbox</type>
</CustomField>