force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Large_expenditure_Description__c.field-meta.xml
<CustomField>
    <fullName>Large_expenditure_Description__c</fullName>
    <label>Large expenditure Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>