force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Leaving_employment__c.field-meta.xml
<CustomField>
    <fullName>Leaving_employment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leaving employment</label>
    <type>Checkbox</type>
</CustomField>