force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Leaving_employment_Description__c.field-meta.xml
<CustomField>
    <fullName>Leaving_employment_Description__c</fullName>
    <label>Leaving employment Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>