force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Loan_into_retirements_Other__c.field-meta.xml
<CustomField>
    <fullName>Loan_into_retirements_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loan into retirements Other</label>
    <type>Checkbox</type>
</CustomField>