force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Loan_into_retirements_Other_Description__c.field-meta.xml
<CustomField>
    <fullName>Loan_into_retirements_Other_Description__c</fullName>
    <label>Loan into retirements Other Description</label>
    <type>TextArea</type>
</CustomField>