force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Medical_treatment_illness__c.field-meta.xml
<CustomField>
    <fullName>Medical_treatment_illness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical treatment illness</label>
    <type>Checkbox</type>
</CustomField>