force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Medical_treatment_illness_Description__c.field-meta.xml
<CustomField>
    <fullName>Medical_treatment_illness_Description__c</fullName>
    <label>Medical treatment / illness Description</label>
    <type>TextArea</type>
</CustomField>