force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Ongoing_income_from_your_superannuation__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_income_from_your_superannuation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ongoing income from your superannuation</label>
    <type>Checkbox</type>
</CustomField>