force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Ongoing_income_superannuation_descriptio__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_income_superannuation_descriptio__c</fullName>
    <label>Ongoing income superannuation descriptio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>