force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Anticipated Changes to Circumstances</relationshipLabel>
    <relationshipName>Anticipated_Changes_to_Circumstances</relationshipName>
    <type>Lookup</type>
</CustomField>