force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Other_anticipate_changes__c.field-meta.xml
<CustomField>
    <fullName>Other_anticipate_changes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other anticipate changes</label>
    <type>Checkbox</type>
</CustomField>