force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Other_anticipate_changes_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_anticipate_changes_Description__c</fullName>
    <label>Other anticipate changes Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>