force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Reduce_expenditure__c.field-meta.xml
<CustomField>
    <fullName>Reduce_expenditure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reduce expenditure</label>
    <type>Checkbox</type>
</CustomField>