force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Reduce_expenditure_Description__c.field-meta.xml
<CustomField>
    <fullName>Reduce_expenditure_Description__c</fullName>
    <label>Reduce expenditure Description</label>
    <type>TextArea</type>
</CustomField>