force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Reduced_income__c.field-meta.xml
<CustomField>
    <fullName>Reduced_income__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reduced income</label>
    <type>Checkbox</type>
</CustomField>