force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Reduced_income_Description__c.field-meta.xml
<CustomField>
    <fullName>Reduced_income_Description__c</fullName>
    <label>Reduced income Description</label>
    <type>TextArea</type>
</CustomField>