force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Reducing_loan_term__c.field-meta.xml
<CustomField>
    <fullName>Reducing_loan_term__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reducing loan term</label>
    <type>Checkbox</type>
</CustomField>