force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Reducing_loan_term_Description__c.field-meta.xml
<CustomField>
    <fullName>Reducing_loan_term_Description__c</fullName>
    <label>Reducing loan term Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>