force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Relevant_options_Other__c.field-meta.xml
<CustomField>
    <fullName>Relevant_options_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Relevant options Other</label>
    <type>Checkbox</type>
</CustomField>