force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Relevant_options_Other_Description__c.field-meta.xml
<CustomField>
    <fullName>Relevant_options_Other_Description__c</fullName>
    <label>Relevant options Other Description</label>
    <type>TextArea</type>
</CustomField>