force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Repayment_of_loan_prior_retirement_Desc__c.field-meta.xml
<CustomField>
    <fullName>Repayment_of_loan_prior_retirement_Desc__c</fullName>
    <label>Repayment of loan prior retirement Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>