force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Repayment_of_loan_prior_to_retirement__c.field-meta.xml
<CustomField>
    <fullName>Repayment_of_loan_prior_to_retirement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repayment of loan prior to retirement</label>
    <type>Checkbox</type>
</CustomField>