force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Sale_of_assets_Retirement__c.field-meta.xml
<CustomField>
    <fullName>Sale_of_assets_Retirement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sale of assets Retirement</label>
    <type>Checkbox</type>
</CustomField>