force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Sale_of_assets_Retirement_Description__c.field-meta.xml
<CustomField>
    <fullName>Sale_of_assets_Retirement_Description__c</fullName>
    <label>Sale of assets Retirement Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>