force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Savings__c.field-meta.xml
<CustomField>
    <fullName>Savings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Savings</label>
    <type>Checkbox</type>
</CustomField>