force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Savings_and_or_Superannuation__c.field-meta.xml
<CustomField>
    <fullName>Savings_and_or_Superannuation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Savings and/or Superannuation</label>
    <type>Checkbox</type>
</CustomField>