force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Savings_Description__c.field-meta.xml
<CustomField>
    <fullName>Savings_Description__c</fullName>
    <label>Savings Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>