force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Savings_Superannuation_Description__c.field-meta.xml
<CustomField>
    <fullName>Savings_Superannuation_Description__c</fullName>
    <label>Savings / Superannuation Description</label>
    <type>TextArea</type>
</CustomField>