force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Superannuation_lump_sum_retirement__c.field-meta.xml
<CustomField>
    <fullName>Superannuation_lump_sum_retirement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Superannuation lump sum retirement</label>
    <type>Checkbox</type>
</CustomField>