force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/fields/Superannuation_lump_sum_retirement_Desc__c.field-meta.xml
<CustomField>
    <fullName>Superannuation_lump_sum_retirement_Desc__c</fullName>
    <label>Superannuation lump sum retirement Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>