force-app/main/default/objects/Anticipated_Changes_to_Circumstance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Additional_income_source_Description__c</columns>
    <columns>Additional_income_source__c</columns>
    <columns>Applicant_1_planning_to_retire_Age__c</columns>
    <columns>Applicant_2_planning_to_retire_Age__c</columns>
    <columns>Co_applicant_s_income_Description__c</columns>
    <columns>Co_applicant_s_income_Retirement_Desc__c</columns>
    <columns>Co_applicant_s_income_Retirement__c</columns>
    <columns>Co_applicant_s_income__c</columns>
    <columns>Do_you_plan_or_anticipate_changes__c</columns>
    <columns>Downsizing_home_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>